--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
     "express-joi-validation": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
